syntax = "proto3";

package chat_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/t1pcrips/chat-service/pkg/chat_v1;chat_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Chat API"
    version: "1.0.0"
    contact: {
      name: "Timofey Podlinov"
      email: "timapodina@gmail.com"
    };
  };
  host: "localhost:8083"
  schemes: HTTP
  schemes: HTTPS
  consumes: "application/json"
  produces: "application/json"
};

service Chat {
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/chat/v1"
      body: "*"
    };
  }

  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/chat/v1"
    };
  }

  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/chat/v1/send-message"
      body: "*"
    };
  }

  rpc Connect(ConnectChatRequest) returns (stream Message) {
    option (google.api.http) = {
      post: '/chat/v1/chat-connect'
      body: "*"
    };
  }
}

message CreateRequest {
  repeated string usernames = 1 [(validate.rules).repeated = {unique: true, items: {string: {min_len:3, max_len:20}}}];
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1 [(validate.rules).int64.gt = 0];
}

message SendMessageRequest {
  string from = 1 [(validate.rules).string = {min_len:3, max_len:20}];
  string text = 2 [(validate.rules).string = {min_len:1, max_len:1000}];
  google.protobuf.Timestamp timestamp = 3;
  int64 toChatId = 4 [(validate.rules).int64.gt = 0];
}

message ConnectChatRequest {
  int64 chat_id = 1;
  int64 user_id = 2;
  string username = 3;
}

message Message {
  string from = 1 [(validate.rules).string = {min_len:3, max_len:20}];
  string text = 2 [(validate.rules).string = {min_len:1, max_len:1000}];
  google.protobuf.Timestamp timestamp = 3;
  int64 toChatId = 4 [(validate.rules).int64.gt = 0];
}